# AzureIoTHubC2DMessage

./: CMakeLists.txt  README.md  azure_iot_hub_sdk_setup.sh  electric_shock.c  electric_shock.h  iot-device.c
